--- a/Views/Shared/_Layout_master.cshtml
+++ b/Views/Shared/_Layout_master.cshtml
@@ -72,10 +72,10 @@
                             <div class="nav-link-icon"><i data-feather="package"></i></div>
                             Đăng ký dự tuyển
                         </a>
-                        <a class="nav-link" href="@Url.Action("KqDuTuyen", "HocVienDangKies")">
+                        @*<a class="nav-link" href="@Url.Action("KqDuTuyen", "HocVienDangKies")">
                             <div class="nav-link-icon"><i data-feather="filter"></i></div>
                             Kết quả dự tuyển
-                        </a>
+                        </a>*@
                         <a class="nav-link" href="@Url.Action("HdSD", "HocVienDangKies")">
                             <div class="nav-link-icon"><i data-feather="globe"></i></div>
                             Hướng dẫn sử dụng
