--- a/Areas/Admin/Views/AdminAuth/Login.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login.cshtml
@@ -1,66 +1,124 @@
-﻿@model HDU_AppXetTuyen.Models.AdminAccount
-@{
+﻿@{
     ViewBag.Title = "Login";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin_auth.cshtml";
+    Layout = null;
 }
+<!DOCTYPE html>
+<html lang="en">
 
-<div id="layoutAuthentication">
-    <div id="layoutAuthentication_content">
-        <main>
-            <div class="container-xl px-4">
-                <div class="row justify-content-center">
-                    <div class="col-lg-5">
-                        <div class="card shadow-lg border-0 rounded-lg mt-5">
-                            <div class="card-header justify-content-center text-center">
-                                <h4 class="mt-3">QUẢN LÝ HỒ SƠ DỰ TUYỂN</h4>
-                            </div>
-                            <div class="card-body">
-                                <!-- Login form-->
-                                @using (Html.BeginForm("Login", "AdminAuth", FormMethod.Post))
-                                {
-                                    @Html.AntiForgeryToken()
-                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                    <div class="mb-3">
-                                        <label class="form-label mb-1" for="Admin_Username">Tên đăng nhập</label>
-                                        @Html.EditorFor(model => model.Admin_Username, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập tên đăng nhập", Value = "admin" } })
-                                        @Html.ValidationMessageFor(model => model.Admin_Username, "", new { @class = "small mb-1 text-danger" })
-                                    </div>
-                                    <div class="mb-3" style="margin-top:5px">
-                                        <label class="form-label mb-1" for="Admin_Pass">Mật khẩu</label>
-                                        @Html.EditorFor(model => model.Admin_Pass, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập mật khẩu", type = "password", Value = "Admin123@" } })
-                                        @Html.ValidationMessageFor(model => model.Admin_Pass, "", new { @class = "small mb-1 text-danger" })
-                                    </div>
-                                    <div class="d-inline-flex flex-nowrap align-items-center justify-content-center">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" checked value="1">
-                                            <label class="form-check-label" for="radioDaiHoc">QL Hệ đại học</label>
-                                        </div>
-                                        <div class="form-check" style="margin-left:15px">
-                                            <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="2">
-                                            <label class="form-check-label" for="radioSauDaiHoc">
-                                               QL Hệ sau đại học                                            </label>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        @{
-                                            if (ViewBag.LoginErrorMessager != null)
-                                            {
-                                                <label class="small mb-1 text-danger" name="error_login" id="error_login">@ViewBag.LoginErrorMessager</label>
-                                            }
-                                        }
-                                    </div>
-                                    <div class="d-flex align-items-center justify-content-center mt-4 mb-0">
-                                        <input class="btn btn-primary" type="submit" value="Đăng nhập" style="width:100%"/>
-                                    </div>
-                                }
-                            </div>
-                        </div>
-                    </div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đăng nhập hệ thống</title>
+    <link href="~/Content/css/bootstrap.css" rel="stylesheet" />
+    <link href="~/Content/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/StylesAdminLogin.css" rel="stylesheet" />
+</head>
+
+<body>
+    <div class="login-container">
+        <form class="login-form" method="post">
+            <div class="text-center text-uppercase"><h5 class="colorlogin" style="font-weight: bold">ĐĂNG NHẬP HỆ THỐNG</h5></div>
+            <hr />
+            <input type="text" placeholder="Tên đăng nhập" name="Admin_Username" id="Admin_Username" class="form-control col-12" required value="saudaihoc">
+            <span id="Admin_Username_Error" class="small mb-1 text-danger col-12"></span>
+
+            <input name="Admin_Pass" id="Admin_Pass" class="form-control col-12" type="password" placeholder="Mật khẩu" required value="Saudaihoc123">
+            <span id="Admin_Pass_Error" class="small mb-1 text-danger col-12"></span>
+
+            <div class="d-inline-flex flex-nowrap mb-2 mt-2 col-12">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" value="0">
+                    <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
+                </div>
+                <div class="form-check" style="margin-left:15px">
+                    <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1">
+                    <label class="form-check-label" for="radioSauDaiHoc">Hệ sau đại học</label>
                 </div>
             </div>
-        </main>
+
+            <span id="RadioHeDaoTao_Error" class="small mb-1 text-danger col-12"></span>
+            <a href="#" class="btn login-button col-12" id="bt_login" name="bt_login">Đăng nhập</a>
+            <span id="Login_Error" class="small mb-1 text-danger col-12"></span>
+            <hr />
+            <div class="register-link">
+                Bạn chưa có tài khoản? <a href="#">Đăng ký</a>
+            </div>
+        </form>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="~/Scripts/scripts.js"></script>
-@Scripts.Render("~/bundles/jqueryval")
+
+
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/modernizr-2.8.3.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('input').on('input', function () {
+                hideErrorMessage($(this));
+                $('#Login_Error').text('');
+            });
+
+            $('input[type="radio"]').on('click', function () {
+                $('#RadioHeDaoTao_Error').text('');
+                $('#Login_Error').text('');
+            });
+        })
+        function hideErrorMessage(input) {
+            var errorContainer = input.next('.text-danger');
+            errorContainer.text('');
+        }
+        $(document).ready(function () {
+            $('#bt_login').click(function () {
+
+                var flag = true;
+                let _Admin_Username = $('#Admin_Username').val();
+                if (!_Admin_Username) { $('#Admin_Username_Error').text('Nhập tên đăng nhập'); }
+
+                let _Admin_Pass = $('#Admin_Pass').val();
+                if (!_Admin_Pass) { $('#Admin_Pass_Error').text('Nhập mật khẩu'); }
+
+                let _Admin_Note = -1; //id_hedaotao: 1 Đại học, 2 Sau đại học
+                if (!$('#radioDaiHoc').is(':checked') && !$('#radioSauDaiHoc').is(':checked')) { $('#RadioHeDaoTao_Error').text('Chọn hệ quản lý'); flag = false; }
+
+                if ($('#radioDaiHoc').is(':checked')) { _Admin_Note = 1; }
+                else if ($('#radioSauDaiHoc').is(':checked')) { _Admin_Note = 2; }
+
+                if (!flag) return;
+
+                var data_entity = {
+                    Admin_Username: _Admin_Username,
+                    Admin_Pass: _Admin_Pass,
+                    Admin_Note: _Admin_Note
+                }
+                console.log(data_entity)
+                /*     return;*/
+
+                $.ajax({
+                    url: "/Admin/AdminAuth/LoginCheck",
+                    type: "POST",
+                    data: JSON.stringify(data_entity),
+                    contentType: "application/json;charset=utf-8",
+                    success: function (res) {
+                        console.log(res.success);
+                        if (res.success == true) {
+                            console.log(res.data);
+                            if (res.data === 'CollegerLogin') { window.location.href = '/Admin/HomeAdmin/Index'; }
+                            if (res.data === 'MasterLogin') { window.location.href = '/Admin/HocVienDangKys/DsHvDuTuyen'; }
+                        } else {
+                            $('#Login_Error').text(res.data);
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        $('#loadingModal').modal('hide');
+                        showToast("Thông báo", "Chưa đăng ký được tài khoản! Vui lòng thử lại!", "bg-error");
+                    }
+                });
+            })
+        })
+
+    </script>
+</body>
+</html>
+
+
