--- a/Areas/Admin/Views/AdminAuth/Login2.cshtml
+++ b/Areas/Admin/Views/AdminAuth/Login2.cshtml
@@ -1,130 +1,65 @@
 ﻿@model HDU_AppXetTuyen.Models.AdminAccount
 @{
     ViewBag.Title = "Login";
-    Layout = null;
+    Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin_auth.cshtml";
 }
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập hệ thống</title>
-    <link href="~/Content/bootstrap.5.1.3.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <style>
-        .login-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f5f5f5;
-        }
-
-        .login-form {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px #aaa;
-            max-width: 450px;
-            width: 100%;
-        }
-
-            .login-form h2 {
-                text-align: center;
-                margin-bottom: 30px;
-            }
-
-            .login-form input[type="text"],
-            .login-form input[type="password"] {
-                width: 100%;
-                padding: 10px;
-                margin-bottom: 15px;
-                border: none;
-                border-radius: 5px;
-                box-shadow: 0px 0px 5px #ccc;
-            }
-
-            .login-form button[type="submit"] {
-                background-color: #ff6a00;
-                color: white;
-                width: 100%;
-                padding: 10px;
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-                font-size: 16px;
-            }
-
-                .login-form button[type="submit"]:hover {
-                    background-color: #808080;
-                    /*  background-color: #0037ffb4;*/
-                }
-
-        .register-link {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-            .register-link a {
-                color: #4CAF50;
-            }
-
-        .colorlogin {
-            color: #ff6a00 !important;
-        }
-
-        .letterspacing {
-            letter-spacing: -1.2px;
-        }
-
-        .login-button {
-            padding: 8px 18px;
-            border-radius: 7px !important;
-            background-color: #ff6a00;
-            border: none;
-            color: #fff;
-            font-size: 16px;
-        }
-
-            .login-button:hover {
-                background-color: #808080;
-                color: #fff;
-            }
-    </style>
-</head>
-
-<body>
-    <div class="login-container">
-        <form class="login-form" method="post">
-            <div class="text-center text-uppercase">
-                <h5 class="colorlogin" style="font-weight: bold">ĐĂNG NHẬP HỆ THỐNG</h5>
-                <hr />
-            </div>
-            <input type="text" placeholder="Tên đăng nhập" name="Admin_Username" id="Admin_Username" required class="form-control">
-            <span id="Admin_Username_Error" class="small mb-1 text-danger"></span>
-            <input type="password" placeholder="Mật khẩu" name="Admin_Pass" id="Admin_Pass" required class="form-control">
-            <span id="Admin_Pass_Error" class="small mb-1 text-danger"></span>
-            <div class="d-inline-flex flex-nowrap align-items-center justify-content-center mb-3 mt-0">
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" checked value="0">
-                    <label class="form-check-label" for="radioDaiHoc">Hệ đại học</label>
-                </div>
-                <div class="form-check" style="margin-left:15px">
-                    <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="1">
-                    <label class="form-check-label" for="radioSauDaiHoc">
-                        Hệ sau đại học
-                    </label>
+<div id="layoutAuthentication">
+    <div id="layoutAuthentication_content">
+        <main>
+            <div class="container-xl px-4">
+                <div class="row justify-content-center">
+                    <div class="col-lg-5">
+                        <div class="card shadow-lg border-0 rounded-lg mt-5">
+                            <div class="card-header justify-content-center text-center">
+                                <h4 class="mt-3">QUẢN LÝ HỒ SƠ DỰ TUYỂN</h4>
+                            </div>
+                            <div class="card-body">
+                                <!-- Login form-->
+                                @using (Html.BeginForm("Login", "AdminAuth", FormMethod.Post))
+                                {
+                                    @Html.AntiForgeryToken()
+                                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                    <div class="mb-3">
+                                        <label class="form-label mb-1" for="Admin_Username">Tên đăng nhập</label>
+                                        @Html.EditorFor(model => model.Admin_Username, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập tên đăng nhập" } })
+                                        @Html.ValidationMessageFor(model => model.Admin_Username, "", new { @class = "small mb-1 text-danger" })
+                                    </div>
+                                    <div class="mb-3" style="margin-top:5px">
+                                        <label class="form-label mb-1" for="Admin_Pass">Mật khẩu</label>
+                                        @Html.EditorFor(model => model.Admin_Pass, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nhập mật khẩu", type = "password" } })
+                                        @Html.ValidationMessageFor(model => model.Admin_Pass, "", new { @class = "small mb-1 text-danger" })
+                                    </div>
+                                    <div class="d-inline-flex flex-nowrap align-items-center justify-content-center">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" id="radioDaiHoc" name="radioHeDaoTao" checked value="1">
+                                            <label class="form-check-label" for="radioDaiHoc">QL Hệ đại học</label>
+                                        </div>
+                                        <div class="form-check" style="margin-left:15px">
+                                            <input class="form-check-input" type="radio" id="radioSauDaiHoc" name="radioHeDaoTao" value="2">
+                                            <label class="form-check-label" for="radioSauDaiHoc">QL Hệ sau đại học</label>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        @{
+                                            if (ViewBag.LoginErrorMessager != null)
+                                            {
+                                                <label class="small mb-1 text-danger" name="error_login" id="error_login">@ViewBag.LoginErrorMessager</label>
+                                            }
+                                        }
+                                    </div>
+                                    <div class="d-flex align-items-center justify-content-center mt-4 mb-0">
+                                        <input class="btn btn-primary" type="submit" value="Đăng nhập" style="width:100%"/>
+                                    </div>
+                                }
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <button type="submit" class="btn login-button">Đăng nhập</button>
-            <div class="register-link">
-                Bạn chưa có tài khoản? <a href="#">Đăng ký</a>
-            </div>
-        </form>
+        </main>
     </div>
-</body>
-
-</html>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="~/Scripts/scripts.js"></script>
+@Scripts.Render("~/bundles/jqueryval")
