--- a/Views/Auth/RegisterMaster.cshtml
+++ b/Views/Auth/RegisterMaster.cshtml
@@ -11,7 +11,7 @@
 
     .login-button {
         padding: 8px 18px;
-        border-radius: 7px !important;
+        border-radius: 3px !important;
         background-color: #ff6a00;
         border: none;
         color: #fff;
@@ -22,7 +22,9 @@
             background-color: #808080;
             color: #fff;
         }
-
+    .form-control, .btn, .form-select {
+        border-radius: 3px
+    }
     th {
         color: #ff6a00 !important;
     }
@@ -53,7 +55,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_HoDem">Họ, tên đệm</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_HoDem" name="HocVien_HoDem" type="text" value="a" />
+                                                        <input class="form-control text-box single-line" id="HocVien_HoDem" name="HocVien_HoDem" type="text"/>
                                                         <span id="Error_Rgt_HocVien_HoDem" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -63,7 +65,7 @@
                                                     <label class="control-label col-md-12"
                                                            for="HocVien_Ten">Tên</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_Ten" name="HocVien_Ten" type="text" value="a" />
+                                                        <input class="form-control text-box single-line" id="HocVien_Ten" name="HocVien_Ten" type="text"/>
                                                         <span id="Error_Rgt_HocVien_Ten" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -75,7 +77,7 @@
                                                     <label class="control-label col-md-12"
                                                            for="HocVien_NgaySinh">Ngày sinh</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_NgaySinh" name="HocVien_NgaySinh" type="date" value="2020-02-02" />
+                                                        <input class="form-control text-box single-line" id="HocVien_NgaySinh" name="HocVien_NgaySinh" type="date" />
                                                         <span id="Error_Rgt_HocVien_NgaySinh" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -102,7 +104,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_CCCD">Số căn cước công dân</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_CCCD" name="HocVien_CCCD" type="text" value="038205020534" placeholder="038205020534" />
+                                                        <input class="form-control text-box single-line" id="HocVien_CCCD" name="HocVien_CCCD" type="text" placeholder="038205020534" />
                                                         <span id="Error_Rgt_HocVien_CCCD" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -111,7 +113,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_CCCD_NgayCap">Ngày cấp CCCD</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_CCCD_NgayCap" name="HocVien_CCCD_NgayCap" type="date" value="2020-02-02" placeholder="02/02/2020" />
+                                                        <input class="form-control text-box single-line" id="HocVien_CCCD_NgayCap" name="HocVien_CCCD_NgayCap" type="date" placeholder="02/02/2020" />
                                                         <span id="Error_Rgt_HocVien_CCCD_NgayCap" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -121,7 +123,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_MatKhau">Mật khẩu</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_MatKhau" name="HocVien_MatKhau" type="password" value="123456" />
+                                                        <input class="form-control text-box single-line" id="HocVien_MatKhau" name="HocVien_MatKhau" type="password"/>
                                                         <span id="Error_Rgt_HocVien_MatKhau" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -130,7 +132,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_MatKhau_NhapLai">Nhập lại mật khẩu</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_MatKhau_NhapLai" name="HocVien_MatKhau_NhapLai" type="password" value="123456" />
+                                                        <input class="form-control text-box single-line" id="HocVien_MatKhau_NhapLai" name="HocVien_MatKhau_NhapLai" type="password" />
                                                         <span id="Error_Rgt_HocVien_MatKhau_NhapLai" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -158,7 +160,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_Email">Email</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_Email" name="HocVien_Email" type="text" value="a@gmail.com" />
+                                                        <input class="form-control text-box single-line" id="HocVien_Email" name="HocVien_Email" type="text"  placeholder="vidu@gmail.com" />
                                                         <span id="Error_Rgt_HocVien_Email" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -167,7 +169,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_DienThoai">Điện thoại</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_DienThoai" name="HocVien_DienThoai" type="text" value="0912345678" placeholder="0912345678" />
+                                                        <input class="form-control text-box single-line" id="HocVien_DienThoai" name="HocVien_DienThoai" type="text" placeholder="0912345678" />
                                                         <span id="Error_Rgt_HocVien_DienThoai" class="small mb-1 text-danger"></span>
 
                                                     </div>
@@ -187,7 +189,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_DanToc">Dân tộc</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_DanToc" name="HocVien_DanToc" type="text" value="a" />
+                                                        <input class="form-control text-box single-line" id="HocVien_DanToc" name="HocVien_DanToc" type="text" />
                                                         <span id="Error_Rgt_HocVien_DanToc" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -197,7 +199,7 @@
                                                     <label class="control-label col-md-12" for="HocVien_HoKhauThuongTru">Hộ khẩu thường trú</label>
                                                     <div class="col-md-12">
 
-                                                        <input class="form-control text-box single-line" id="HocVien_HoKhauThuongTru" name="HocVien_HoKhauThuongTru" type="text" value="a" />
+                                                        <input class="form-control text-box single-line" id="HocVien_HoKhauThuongTru" name="HocVien_HoKhauThuongTru" type="text"  />
                                                         <span id="Error_Rgt_HocVien_HoKhauThuongTru" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -206,7 +208,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12" for="HocVien_DiaChiLienHe">Địa chỉ liên hệ</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line" id="HocVien_DiaChiLienHe" name="HocVien_DiaChiLienHe" type="text" value="a" />
+                                                        <input class="form-control text-box single-line" id="HocVien_DiaChiLienHe" name="HocVien_DiaChiLienHe" type="text" />
                                                         <span id="Error_Rgt_HocVien_DiaChiLienHe" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -250,7 +252,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12">Đơn vị công tác</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_TenDonViCongTac" name="HocVien_TenDonViCongTac" type="text" value="a" />
+                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_TenDonViCongTac" name="HocVien_TenDonViCongTac" type="text" />
                                                         <span id="Error_Rgt_HocVien_TenDonViCongTac" class="small mb-1 text-danger span-hv-dvcongtac"></span>
                                                     </div>
                                                 </div>
@@ -259,7 +261,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12">Chức vụ</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_ChucVu" name="HocVien_ChucVu" type="text" value="a" />
+                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_ChucVu" name="HocVien_ChucVu" type="text" />
                                                         <span id="Error_Rgt_HocVien_ChucVu" class="small mb-1 text-danger span-hv-dvcongtac"></span>
                                                     </div>
                                                 </div>
@@ -268,7 +270,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12">Chuyên môn</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_ChuyenMon" name="HocVien_ChuyenMon" type="text" value="a" />
+                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_ChuyenMon" name="HocVien_ChuyenMon" type="text" />
                                                         <span id="Error_Rgt_HocVien_ChuyenMon" class="small mb-1 text-danger span-hv-dvcongtac"></span>
                                                     </div>
                                                 </div>
@@ -277,7 +279,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12">Thâm niên nghề</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_ThamNien" name="HocVien_ThamNien" type="text" value="a" />
+                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_ThamNien" name="HocVien_ThamNien" type="text" />
                                                         <span id="Error_Rgt_HocVien_ThamNien" class="small mb-1 text-danger span-hv-dvcongtac"></span>
 
                                                     </div>
@@ -287,7 +289,7 @@
                                                 <div class="form-group">
                                                     <label class="control-label col-md-12">Năm BĐ công tác</label>
                                                     <div class="col-md-12">
-                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_NamCT" name="HocVien_NamCT" type="number" value="5" />
+                                                        <input class="form-control text-box single-line input-hv-dvcongtac" id="HocVien_NamCT" name="HocVien_NamCT"/>
                                                         <span id="Error_Rgt_HocVien_NamCT" class="small mb-1 text-danger span-hv-dvcongtac"></span>
                                                     </div>
                                                 </div>
@@ -310,7 +312,9 @@
                                 <div class="col-md-12">
                                     <input class="btn login-button" type="submit" id="bt_submit_register_hocvien" value="Đăng ký thông tin" />
                                 </div>
-                                <a style="text-decoration: none; letter-spacing: -0.7px; color: #ff6a00; margin-top: 8px; margin-bottom: 1px" href="@Url.Action("Login", "Auth")">Bạn đã có tài khoản ? <b>Quay lại đăng nhập</b></a>
+                                <div class="col-md-12 mt-2">
+                                    <a style="text-decoration: none; letter-spacing: -0.7px; color: #ff6a00;" href="@Url.Action("Login", "Auth")">Bạn đã có tài khoản ? <b>Quay lại đăng nhập</b></a>
+                                </div>                              
                             </center>
                         </div>
                     </div>
